fix: fixing horizontal scroll on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -453,7 +453,7 @@ h1 {
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 .outreach-item {
